# alavai

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PACKAGING.md  PLAN.md  SYNCING.md  UI-HANDOVER.md
docs/design/: DESIGN.md  board.html
man/: alavai.1
packaging/: PKGBUILD
src/: autostart.rs  gui.rs  icon.rs  instance.rs  localapi.rs  main.rs  notify.rs  theme.rs  tray.rs
testdata/: netcheck.json  notify_netmap.json  notify_prefs.json  notify_state.json  prefs.json  profiles.json  status.json
