[package]
name = "alavai"
version = "0.0.1"
edition = "2024"
description = "A lightweight, distro-agnostic Tailscale client for Linux with one-click tailnet switching"
license = "GPL-3.0-or-later"
repository = "https://github.com/alex-poor/alavai"
readme = "README.md"
keywords = ["tailscale", "vpn", "tray", "linux"]
categories = ["command-line-utilities"]

# The dependency tree is kept deliberately small. Phases 0–2 (CLI, tray, and the
# live watch-ipn-bus stream) needed only the crates below — the stream is a
# blocking read on its own thread, so no async runtime/HTTP client was required.
# Later phases add the GUI and friends (commented; see docs/PLAN.md).
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ksni = { version = "0.3.5", features = ["blocking"] }

# --- Phase 3/4: GUI + notifications + config ---
# iced = { version = "0.13", features = ["tokio", "image", "svg"] }
# notify-rust = "4"
# directories = "5"
# toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
