[package]
name = "alavai"
version = "0.2.2"
edition = "2024"
description = "A lightweight, distro-agnostic Tailscale client for Linux with one-click tailnet switching"
license = "GPL-3.0-or-later"
repository = "https://github.com/alex-poor/alavai"
readme = "README.md"
keywords = ["tailscale", "vpn", "tray", "linux"]
categories = ["command-line-utilities"]

# The dependency tree is kept deliberately small. Phases 0–2 (CLI, tray, and the
# live watch-ipn-bus stream) needed only the crates below — the stream is a
# blocking read on its own thread, so no async runtime/HTTP client was required.
# Later phases add the GUI and friends (commented; see docs/PLAN.md).
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# Use ksni's async-io backend (not the default tokio one): it makes zbus run its
# own internal executor, so D-Bus works without an ambient tokio runtime. This
# matters because iced_winit also opens a session-bus connection — under tokio
# mode that path panics; under async-io it just works. Also drops tokio entirely.
ksni = { version = "0.3.5", default-features = false, features = ["blocking", "async-io"] }
# Already in the tree via iced's tiny-skia renderer; used directly to rasterize
# the brand mesh icons for the tray (ARGB) and the window icon (RGBA).
resvg = { version = "0.47", default-features = false }
# iced with the tiny-skia *software* renderer (no wgpu/GPU dependency) for a
# smaller binary that runs cleanly on any distro, VM, or GPU-less setup.
# `linux-theme-detection` is intentionally omitted: it makes iced call D-Bus via
# zbus, which `ksni` configures for the tokio backend — and the GUI runs on
# iced's own (non-tokio) executor, so that path would panic. We pick the theme
# ourselves instead.
iced = { version = "0.14.0", default-features = false, features = [
    "tiny-skia",
    "svg",
    "crisp",
    "web-colors",
    "thread-pool",
    "x11",
    "wayland",
] }

# --- Phase 4: notifications + config ---
# notify-rust = "4"
# directories = "5"
# toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
